--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <!-- Ustawienie kodowania na UTF-8 -->
     <meta charset="UTF-8">
-    <!-- Responsywność -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Kredytu Hipotecznego</title>
-    <!-- Zewnętrzne zależności Bootstrap, Chart.js i Google Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
-    <!-- Lokalny plik CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Sekcja Logo -->
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
@@ -24,9 +19,7 @@
         </div>
     </div>
 
-    <!-- Główny Kontener -->
     <div class="container">
-        <!-- Sekcja Formularza -->
         <div class="form-section" id="formSection">
             <div class="checkbox-row compare-credit-row">
                 <label class="checkbox-label" id="porownajKredytLabel">
@@ -41,7 +34,6 @@
             <div class="form-container">
                 <div class="form-wrapper">
                     <form id="obligacjeForm">
-                        <!-- Pierwszy wiersz: Kwota kredytu, Ilość rat, Oprocentowanie -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
@@ -70,7 +62,6 @@
                                 <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
                             </div>
                         </div>
-                        <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
@@ -93,7 +84,6 @@
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
-                        <!-- Bezpieczny Kredyt 2% -->
                         <div class="variable-rate-container" id="bezpiecznyKredytContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="bezpiecznyKredytLabel">
@@ -103,7 +93,6 @@
                                 </label>
                             </div>
                         </div>
-                        <!-- Nadpłata kredytu -->
                         <div class="variable-rate-container" id="nadplataKredytuContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="nadplataKredytuLabel">
@@ -113,11 +102,54 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="nadplataKredytuInputs">
-                                <div class="variable-inputs-wrapper" id="nadplataKredytuInputsWrapper"></div>
-                                <button type="button" class="btn btn-secondary btn-sm" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
+                                <div class="variable-inputs-wrapper" id="nadplataKredytuInputsWrapper">
+                                    <div class="variable-input-group" data-type="nadplata">
+                                        <div class="fields-wrapper">
+                                            <div class="form-group">
+                                                <label class="form-label">Nadpłata</label>
+                                                <select class="form-select nadplata-type-select">
+                                                    <option value="Jednorazowa" selected>Jednorazowa</option>
+                                                    <option value="Miesięczna">Miesięczna</option>
+                                                    <option value="Kwartalna">Kwartalna</option>
+                                                    <option value="Roczna">Roczna</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="form-label">Po nadpłacie</label>
+                                                <select class="form-select nadplata-effect-select">
+                                                    <option value="Skróć okres" selected>Skróć okres</option>
+                                                    <option value="Zmniejsz ratę">Zmniejsz ratę</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="form-label">W</label>
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control variable-cykl" min="1" max="419" step="1" value="1">
+                                                    <span class="input-group-text unit-miesiacu">miesiącu</span>
+                                                </div>
+                                                <input type="range" class="form-range variable-cykl-range" min="1" max="419" step="1" value="1">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="form-label">Kwota</label>
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control variable-rate" min="0" max="1000000" step="1" value="1000,00">
+                                                    <span class="input-group-text unit-zl" style="width: 30px; text-align: center;">zł</span>
+                                                </div>
+                                                <input type="range" class="form-range variable-rate-range" min="0" max="1000000" step="1" value="1000">
+                                            </div>
+                                        </div>
+                                        <div class="remove-first-btn-wrapper">
+                                            <button type="button" class="btn btn-danger btn-sm remove-first-btn">Usuń</button>
+                                        </div>
+                                        <div class="remove-btn-wrapper">
+                                            <button type="button" class="btn btn-danger btn-sm remove-btn">Usuń</button>
+                                        </div>
+                                    </div>
+                                    <!-- Dodaj więcej grup variable-input-group, jeśli potrzebujesz więcej pól -->
+                                </div>
+                                <button type="button" class="btn btn-secondary btn-sm" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną nadpłatę</button>
                             </div>
                         </div>
-                        <!-- Zmienne oprocentowanie -->
                         <div class="variable-rate-container" id="variableOprocentowanieContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="zmienneOprocentowanieLabel">
@@ -127,11 +159,38 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableOprocentowanieInputs">
-                                <div class="variable-inputs-wrapper" id="variableOprocentowanieInputsWrapper"></div>
+                                <div class="variable-inputs-wrapper" id="variableOprocentowanieInputsWrapper">
+                                    <div class="variable-input-group" data-type="oprocentowanie">
+                                        <div class="fields-wrapper">
+                                            <div class="form-group">
+                                                <label class="form-label">Od</label>
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control variable-cykl" min="2" max="420" step="1" value="2">
+                                                    <span class="input-group-text">miesiąca</span>
+                                                </div>
+                                                <input type="range" class="form-range variable-cykl-range" min="2" max="420" step="1" value="2">
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="form-label">Oprocentowanie</label>
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control variable-rate" min="0.1" max="25" step="0.01" value="7,00">
+                                                    <span class="input-group-text">%</span>
+                                                </div>
+                                                <input type="range" class="form-range variable-rate-range" min="0.1" max="25" step="0.01" value="7">
+                                            </div>
+                                        </div>
+                                        <div class="remove-first-btn-wrapper">
+                                            <button type="button" class="btn btn-danger btn-sm remove-first-btn">Usuń</button>
+                                        </div>
+                                        <div class="remove-btn-wrapper">
+                                            <button type="button" class="btn btn-danger btn-sm remove-btn">Usuń</button>
+                                        </div>
+                                    </div>
+                                    <!-- Dodaj więcej grup variable-input-group, jeśli potrzebujesz więcej pól -->
+                                </div>
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
-                        <!-- Przycisk oblicz -->
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki kredytu">Oblicz</button>
                         </div>
@@ -140,7 +199,6 @@
             </div>
         </div>
 
-        <!-- Sekcja Wyników -->
         <div class="result-section" id="resultSection" style="display: none;">
             <div class="result-header">
                 <h4>Podsumowanie wyników</h4>
@@ -186,7 +244,6 @@
                     </div>
                 </div>
             </div>
-            <!-- Sekcja Harmonogramu -->
             <div class="harmonogram-container">
                 <div class="result-wrapper-harmonogram">
                     <div class="harmonogram">
@@ -215,7 +272,6 @@
         </div>
     </div>
 
-    <!-- Zewnętrzne skrypty -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <script src="https://unpkg.com/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
