--- a/index.html
+++ b/index.html
@@ -97,7 +97,50 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="nadplataKredytuInputs">
-                                <div class="variable-inputs-wrapper" id="nadplataKredytuWrapper"></div>
+                                <div class="variable-inputs-wrapper" id="nadplataKredytuWrapper">
+                                    <div class="variable-input-group" data-type="nadplata">
+                                        <div class="fields-wrapper">
+                                            <!-- Rząd 1: Typ nadpłaty, Efekt nadpłaty -->
+                                            <div class="form-row">
+                                                <div class="form-group box-select">
+                                                    <label class="form-label">Typ nadpłaty</label>
+                                                    <select class="form-select nadplata-type-select">
+                                                        <option value="Jednorazowa">Jednorazowa</option>
+                                                        <option value="Miesięczna">Miesięczna</option>
+                                                        <option value="Kwartalna">Kwartalna</option>
+                                                        <option value="Roczna">Roczna</option>
+                                                    </select>
+                                                </div>
+                                                <div class="form-group box-select">
+                                                    <label class="form-label">Efekt nadpłaty</label>
+                                                    <select class="form-select nadplata-effect-select">
+                                                        <option value="Skróć okres">Skróć okres</option>
+                                                        <option value="Zmniejsz ratę">Zmniejsz ratę</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <!-- Rząd 2: Kwota nadpłaty, W którym miesiącu -->
+                                            <div class="form-row">
+                                                <div class="form-group box-amount">
+                                                    <label class="form-label">Kwota nadpłaty</label>
+                                                    <div class="input-group">
+                                                        <input type="number" class="form-control variable-rate" min="0" step="1">
+                                                        <span class="input-group-text unit-zl">zł</span>
+                                                    </div>
+                                                    <input type="range" class="form-range range-slider variable-rate-range" min="0" step="1">
+                                                </div>
+                                                <div class="form-group box-period">
+                                                    <label class="form-label">W którym miesiącu</label>
+                                                    <div class="input-group">
+                                                        <input type="number" class="form-control variable-cykl" min="1" step="1">
+                                                        <span class="input-group-text unit-miesiacu">miesiącu</span>
+                                                    </div>
+                                                    <input type="range" class="form-range range-slider variable-cykl-range" min="1" step="1">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <button type="button" class="btn btn-functional" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
@@ -112,7 +155,28 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableOprocentowanieInputs">
-                                <div class="variable-inputs-wrapper" id="variableOprocentowanieWrapper"></div>
+                                <div class="variable-inputs-wrapper" id="variableOprocentowanieWrapper">
+                                    <div class="variable-input-group" data-type="oprocentowanie">
+                                        <div class="fields-wrapper">
+                                            <div class="form-group box-period">
+                                                <label class="form-label">Od którego miesiąca</label>
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control variable-cykl" min="2" step="1">
+                                                    <span class="input-group-text unit-miesiaca">miesiąca</span>
+                                                </div>
+                                                <input type="range" class="form-range range-slider variable-cykl-range" min="2" step="1">
+                                            </div>
+                                            <div class="form-group box-rate">
+                                                <label class="form-label">Nowe oprocentowanie</label>
+                                                <div class="input-group">
+                                                    <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1">
+                                                    <span class="input-group-text">%</span>
+                                                </div>
+                                                <input type="range" class="form-range range-slider variable-rate-range" min="0.1" max="25" step="0.1">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <button type="button" class="btn btn-functional" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
@@ -121,89 +185,6 @@
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki kredytu">Oblicz</button>
                         </div>
-
-                        <!-- Szablony dla dynamicznych pól -->
-                        <!-- Szablon: Zmienne Oprocentowanie -->
-                        <template id="variableOprocentowanieTemplate">
-                            <div class="variable-input-group" data-type="oprocentowanie">
-                                <div class="fields-wrapper">
-                                    <div class="form-group box-period">
-                                        <label class="form-label">Od którego miesiąca</label>
-                                        <div class="input-group">
-                                            <input type="number" class="form-control variable-cykl" min="2" step="1">
-                                            <span class="input-group-text unit-miesiaca">miesiąca</span>
-                                        </div>
-                                        <input type="range" class="form-range range-slider variable-cykl-range" min="2" step="1">
-                                    </div>
-                                    <div class="form-group box-rate">
-                                        <label class="form-label">Nowe oprocentowanie</label>
-                                        <div class="input-group">
-                                            <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1">
-                                            <span class="input-group-text">%</span>
-                                        </div>
-                                        <input type="range" class="form-range range-slider variable-rate-range" min="0.1" max="25" step="0.1">
-                                    </div>
-                                </div>
-                                <div class="remove-first-btn-wrapper">
-                                    <button type="button" class="btn btn-reset remove-first-btn" style="display: none;">Usuń</button>
-                                </div>
-                                <div class="remove-btn-wrapper">
-                                    <button type="button" class="btn btn-reset remove-btn" style="display: none;">Usuń</button>
-                                </div>
-                            </div>
-                        </template>
-
-                        <!-- Szablon: Nadpłata Kredytu -->
-                        <template id="nadplataKredytuTemplate">
-                            <div class="variable-input-group" data-type="nadplata">
-                                <div class="fields-wrapper">
-                                    <!-- Rząd 1: Typ nadpłaty, Efekt nadpłaty -->
-                                    <div class="form-row">
-                                        <div class="form-group box-select">
-                                            <label class="form-label">Typ nadpłaty</label>
-                                            <select class="form-select nadplata-type-select">
-                                                <option value="Jednorazowa">Jednorazowa</option>
-                                                <option value="Miesięczna">Miesięczna</option>
-                                                <option value="Kwartalna">Kwartalna</option>
-                                                <option value="Roczna">Roczna</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group box-select">
-                                            <label class="form-label">Efekt nadpłaty</label>
-                                            <select class="form-select nadplata-effect-select">
-                                                <option value="Skróć okres">Skróć okres</option>
-                                                <option value="Zmniejsz ratę">Zmniejsz ratę</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <!-- Rząd 2: Kwota nadpłaty, W którym miesiącu -->
-                                    <div class="form-row">
-                                        <div class="form-group box-amount">
-                                            <label class="form-label">Kwota nadpłaty</label>
-                                            <div class="input-group">
-                                                <input type="number" class="form-control variable-rate" min="0" step="1">
-                                                <span class="input-group-text unit-zl">zł</span>
-                                            </div>
-                                            <input type="range" class="form-range range-slider variable-rate-range" min="0" step="1">
-                                        </div>
-                                        <div class="form-group box-period">
-                                            <label class="form-label">W którym miesiącu</label>
-                                            <div class="input-group">
-                                                <input type="number" class="form-control variable-cykl" min="1" step="1">
-                                                <span class="input-group-text unit-miesiacu">miesiącu</span>
-                                            </div>
-                                            <input type="range" class="form-range range-slider variable-cykl-range" min="1" step="1">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="remove-first-btn-wrapper">
-                                    <button type="button" class="btn btn-reset remove-first-btn" style="display: none;">Usuń</button>
-                                </div>
-                                <div class="remove-btn-wrapper">
-                                    <button type="button" class="btn btn-reset remove-btn" style="display: none;">Usuń</button>
-                                </div>
-                            </div>
-                        </template>
                     </form>
                 </div>
             </div>
