--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
             <button id="zoomInBtn" class="btn btn-additional" aria-label="Powiększ">+</button>
+            <button id="calcToggleBtn" class="btn btn-additional" aria-label="Otwórz kalkulator">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                    <rect x="6" y="6" width="12" height="4"/>
+                    <circle cx="7" cy="13" r="1"/>
+                    <circle cx="12" cy="13" r="1"/>
+                    <circle cx="17" cy="13" r="1"/>
+                    <circle cx="7" cy="16" r="1"/>
+                    <circle cx="12" cy="16" r="1"/>
+                    <circle cx="17" cy="16" r="1"/>
+                    <circle cx="7" cy="19" r="1"/>
+                    <circle cx="12" cy="19" r="1"/>
+                    <circle cx="17" cy="19" r="1"/>
+                </svg>
+            </button>
             <button id="zoomOutBtn" class="btn btn-additional" aria-label="Pomniejsz">-</button>
             <button id="toggleDarkModeBtn" class="btn btn-additional" aria-label="Przełącz tryb ciemny">🌙</button>
         </div>
@@ -204,6 +219,42 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Kalkulator (ukryty domyślnie) -->
+    <div class="sidebar-box draggable" id="calculatorBox" style="display: none;">
+        <h3 class="sidebar-header">
+            Kalkulator
+            <button id="closeCalcBtn" class="close-btn" title="Zamknij kalkulator">×</button>
+        </h3>
+        <div class="calculator">
+            <input type="text" id="calcDisplay" readonly>
+            <div class="calc-buttons">
+                <button class="calc-btn calc-clear">C</button>
+                <button class="calc-btn calc-operation">±</button>
+                <button class="calc-btn calc-operation">%</button>
+                <button class="calc-btn calc-operation">/</button>
+
+                <button class="calc-btn calc-number">7</button>
+                <button class="calc-btn calc-number">8</button>
+                <button class="calc-btn calc-number">9</button>
+                <button class="calc-btn calc-operation">*</button>
+
+                <button class="calc-btn calc-number">4</button>
+                <button class="calc-btn calc-number">5</button>
+                <button class="calc-btn calc-number">6</button>
+                <button class="calc-btn calc-operation">-</button>
+
+                <button class="calc-btn calc-number">1</button>
+                <button class="calc-btn calc-number">2</button>
+                <button class="calc-btn calc-number">3</button>
+                <button class="calc-btn calc-operation">+</button>
+
+                <button class="calc-btn calc-number calc-zero">0</button>
+                <button class="calc-btn calc-number">.</button>
+                <button class="calc-btn calc-equals">=</button>
             </div>
         </div>
     </div>
