--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
-            <button id="calcToggleBtn" class="btn btn-sm" aria-label="Otwórz kalkulator">
+            <button id="calcToggleBtn" class="btn btn-additional" aria-label="Otwórz kalkulator">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
                     <rect x="6" y="6" width="12" height="4"/>
